--- a/styles.css
+++ b/styles.css
@@ -19,28 +19,53 @@ body {
     cursor: pointer;
 }
 
-/* Media queries for image resizing */
+
+.mosaic-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.mosaic-item {
+    flex: 1 1 100%; /* Initially, one item per row for smaller screens */
+    overflow: hidden;
+    border-radius: 8px;
+}
+
+.mosaic-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border: 2 solid;
+    border-radius: 10px;
+    border-color: #adb5bd;
+    background-color: #adb5bd;
+    cursor: pointer;
+}
+
+/* Adjust layout for larger screens using media queries */
+
 @media (min-width: 576px) {
-    .album img {
-        width: calc(50% - 20px);
+    .mosaic-item {
+        flex: 1 1 calc(50% - 10px);
     }
 }
 
 @media (min-width: 768px) {
-    .album img {
-        width: calc(33.33% - 20px);
+    .mosaic-item {
+        flex: 1 1 calc(33.33% - 10px);
     }
 }
 
 @media (min-width: 992px) {
-    .album img {
-        width: calc(25% - 20px);
+    .mosaic-item {
+        flex: 1 1 calc(25% - 10px);
     }
 }
 
 @media (min-width: 1200px) {
-    .album img {
-        width: calc(20% - 20px);
+    .mosaic-item {
+        flex: 1 1 calc(20% - 10px);
     }
 }
-/* End */
+
